# collie

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  build.rs  consoles.toml  flake.nix
.cargo/: config.toml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  test.yml
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.ts  stores.ts  types.ts
frontend/src/lib/components/: ConfigSection.svelte  FolderPicker.svelte  GameCard.svelte  ProgressSection.svelte
src/: backoff.rs  cache.rs  console.rs  gamelist.rs  image.rs  lib.rs  main.rs  progress.rs  scanner.rs  scraping.rs  storage.rs
src/scraper/: gamefaqs.rs  mod.rs
src/scraper/screenscraper/: mod.rs  tests.rs
src/scraper/thegamesdb/: mod.rs  tests.rs
src/server/: mod.rs  state.rs  static_files.rs
src/server/api/: directories.rs  games.rs  images.rs  mod.rs  scrape.rs
