[package]
name = "collie"
version = "0.1.0"
edition = "2024"

[lib]
name = "collie"
path = "src/lib.rs"

[features]
default = ["bundled"]
bundled = []

[dependencies]
async-trait = "0.1"
axum = "0.8.6"
backoff = { version = "0.4", features = ["tokio"] }
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.5.0"
dirs = "6.0"
dunce = "1.0"
fast_image_resize = "5.3"
futures = "0.3"
image = "0.25"
itertools = "0.14.0"
mime_guess = "2.0"
quick-xml = { version = "0.38", features = ["serialize"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = "8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
toml = "0.9"
tower = "0.5"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
webbrowser = "1.0"

[dev-dependencies]
test-case = "3.3.1"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
